dsp-cli/tests/snapshots/auth_snapshots__auth_logout_prose_not_cached.snap
---
source: tests/auth_snapshots.rs
expression: buf_to_string(&buf)
---
Not logged in to https://api.example.com (nothing to remove).
