dsp-cli/tests/snapshots/auth_snapshots__auth_logout_prose_was_cached.snap
---
source: tests/auth_snapshots.rs
expression: buf_to_string(&buf)
---
Logged out of https://api.example.com.
