dsp-cli/tests/snapshots/auth_snapshots__auth_set_token_lines.snap
---
source: tests/auth_snapshots.rs
expression: buf_to_string(&buf)
---
https://api.dev.dasch.swiss
