dsp-cli/tests/snapshots/auth_snapshots__auth_set_token_prose_minimal.snap
---
source: tests/auth_snapshots.rs
expression: out
---
Cached token for https://api.dev.dasch.swiss.
